--- a/projeto_slacko/roles/slacko/tasks/main.yml
+++ b/projeto_slacko/roles/slacko/tasks/main.yml
@@ -7,7 +7,7 @@
     dest: /opt
     separate_git_dir: /opt/ansible-examples.git
 
-- name: instlando mongoDB
+- name: instalando mongoDB
   apt:
     name: mongodb
     state: present
@@ -39,11 +39,11 @@
     dest: "{{ path_api }}"
     mode: '0755' 
 
-- name: iniciando serviço
+- name: 'iniciando serviço'
   template:
     src: templates/slacko-api.service
     dest: /etc/systemd/system/
     owner: root
     group: root
   notify:
-    - start slacko-api.service 
+    - restart slacko-api.service 
