--- a/projeto_slacko/ansible.cfg
+++ b/projeto_slacko/ansible.cfg
@@ -4,5 +4,5 @@
  become_user = root
  ask_pass = False
  host_key_checking = False
- inventory = ./inventory.yml
+ inventory = inventory.yml
  deprecation_warnings = False
