--- a/projeto_slacko/roles/slacko/vars/main.yml
+++ b/projeto_slacko/roles/slacko/vars/main.yml
@@ -1,5 +1,5 @@
 ---
 # vars file for slacko
-
-service_slacko: "/etc/systemd/system/slacko-api.service"
-path_api: "/opt/slacko-api/"
+vars:
+  service_slacko: "/etc/systemd/system/"
+  path_api: "/opt/slacko-api/"
